Verify large pages enabled when reporting zgc 0 shmem.