@@ -3684,6 +3684,20 @@ class TestAnalysis {
     }
 
     @Test
+    void testZgcUseLargePagesDisabledShmemZero() {
+        FatalErrorLog fel = new FatalErrorLog();
+        String jvm_args = "jvm_args: -Xmx10G -XX:+UseZGC -XX:-UseLargePages -XX:+UseTransparentHugePages";
+        VmArguments vmArgumentEvent = new VmArguments(jvm_args);
+        fel.getVmArguments().add(vmArgumentEvent);
+        String meminfo = "ShmemHugePages:        0 kB";
+        Meminfo meminfoEvent = new Meminfo(meminfo);
+        fel.getMeminfos().add(meminfoEvent);
+        fel.doAnalysis();
+        assertFalse(fel.hasAnalysis(Analysis.ERROR_LARGE_PAGES_ZGC_SHMEM_ZERO.getKey()),
+                Analysis.ERROR_LARGE_PAGES_ZGC_SHMEM_ZERO + " analysis incorrectly identified.");
+    }
+
+    @Test
     void testZgcUseLargePagesShmemZero() {
         FatalErrorLog fel = new FatalErrorLog();
         String jvm_args = "jvm_args: -Xmx10G -XX:+UseZGC -XX:+UseLargePages -XX:+UseTransparentHugePages";
